# expense

./: .env  CLAUDE.md  README  SYSTEM_OVERVIEW.txt  app.py  config.py  main.py  momo_import.py  pyproject.toml  requirements.txt  test_db_connection.py  test_momo_import.py
instance/: expense_tracker.db
migrations/versions/: 88e0f97a4f92_add_momo_import_fields.py  ce30e8a97d9c_add_currency_field_to_user_model.py
templates/: accounts.html  add_account.html  add_category.html  add_transaction.html  categories.html  dashboard.html  import_history.html  import_preview.html  import_statement.html  index.html  landing.html  layout.html  momo_dashboard.html  momo_insights.html  momo_transactions.html  profile.html  register.html  report.html  transactions.html  update_account.html  update_category.html
